# toy-compiler-

./: CMakeLists.txt  README.md
example/: hello.toy
include/toy/: AST.h  ASTPrinter.h  Lexer.h  Lowering.h  Parser.h
lib/: AST.cpp  ASTPrinter.cpp  Lexer.cpp  Lowering.cpp  Parser.cpp
tools/: toy-lex.cpp  toy-parse.cpp
